# StepuP_setup

./: .gitignore  README.md  check_data.py  check_emg_data.py  check_sync_mocap_eeg.py  pyproject.toml  pytrigno.py
analysis/: check_mocap_data.py
check_scripts/: check_combined_data.py  check_combined_data_bologna.py  check_combined_data_sydney.py  check_combined_data_telaviv.py  check_eeg.py  check_emg.py  check_mocap.py  check_sync_data.py
data/: test-walking_witherror.xdf
data/test_sydney_110325/csv file/: Information_ReadiT.txt
software/: README.md  block_randomize_on_hy.py
software/LabRecorder/: LabRecorder.cfg
sync_scripts/: cometa2lsl.py  cometaemg2lsl.py  delsys2lsl.py  delsys_lsl_stream.py  delsys_lsl_stream_biosiglive.py  gtec2lsl.cpp  gtec2lsl.py  localReadandSendMultiplexedEMG.m  pytrigno.py  qualisys2lsl.py  real_time_data_stream_JW.m  vicon2lsl.py
sync_scripts/LSLDelsysGUI/AeroPy/: DataManager.py  TrignoBase.py
sync_scripts/LSLDelsysGUI/Export/: CsvWriter.py
vendor_examples/WaveX_SDK_example/: test01.csv  waveX_SDK_interface.py  waveX_test.py
vendor_examples/WaveX_SDK_example/idea/: misc.xml  modules.xml  workspace.xml
vendor_examples/WaveX_SDK_example/pythonnet-2.5.2.dist-info/: RECORD
