[tool.poetry]
name = "stepup-setup-jw"
version = "0.1.0"
description = "This repo holds example code to check the timing between devices recorded in LSL"
authors = ["JuliusWelzel <julius.welzel@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylsl = "^1.16.2"
pyxdf = "^1.16.4"
biosiglive = "^2.0.3"
ipykernel = "^6.28.0"
pyqtgraph = "^0.13.3"
pyqt6 = "^6.6.1"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
shortuuid = "^1.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
